--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
     </div>
  <div id="notification" class="notification">
     <div class="notification-content">
-        <p class="notification-text">Игра окончена!</p>
-        <button onclick="closeNotification()">Закрыть</button>
+        <p class="notification-text">Game over!</p>
+        <button onclick="closeNotification()">Close</button>
     </div>
 </div>
     <audio id="click-sound" src="click.mp3"></audio><!-- Звуковой эффект для воспроизведения -->
